[package]
name = "redox_intelflash"
version = "0.1.0"
edition = "2018"
description = "Library for parsing Intel UEFI images"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/intelflash"

[lib]
name = "intelflash"

[dependencies]
bitflags = "1.0.4"
plain = "0.2.3"
redox_uefi = "0.1.0"
